--- a/templates/add_text_fragment.html
+++ b/templates/add_text_fragment.html
@@ -19,6 +19,7 @@
       Uusi teksti:<br>
       <textarea name="words" rows="4" cols="90"> </textarea>
       <input hidden name="return_page" value="{{return_page}}" />
+      <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}" />
     </p>
 
     <input type="submit" value="Lähetä" />
