--- a/templates/edit_text_fragment.html
+++ b/templates/edit_text_fragment.html
@@ -16,6 +16,7 @@
       <!-- <input type="text" name="words" size="120" value="{{text_fragment.words}}" /> -->
       <textarea name="words" rows="4" cols="90">{{text_fragment.words}}</textarea>
       <input hidden name="return_page" value="{{return_page}}" />
+      <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}" />
     </p>
 
     <input type="submit" value="Lähetä" />
